--- a/css/style.css
+++ b/css/style.css
@@ -55,20 +55,10 @@ header #cust_nav .container #cust_brand {
 
 header #cust_nav .container #cust_brand span {
     position: absolute;
-    top: 55%;
-    right: 14.4%;
+    top: 57%;
+    right: 30%;
     color: #000;
     font-size: 21px;
-}
-
-/* 
-header #cust-nav .container #cust-brand img {
-    margin-left: 6px;
-}
-
-header nav .container #navbarSupportedContent ul li a{
-    font-size: 15px;
-    line-height: 17px;
 }
 
 header nav .container #navbarSupportedContent ul li a.nav-link.active {
@@ -77,18 +67,18 @@ header nav .container #navbarSupportedContent ul li a.nav-link.active {
     padding-right: 30px !important;
     padding-left: 30px !important;
     color: #000;
-} 
-*/
+}           
+
 
 /* End Header Nav Css */
-header div.container div.row div.col-lg-5 h1 {
+header div.container div.row div.col-lg-4 h1 {
     font-size: 51px;
     color: #ffffff;
     font-weight: bold;
-    margin-top: 110px;
+    margin-top: 30%;
 }
 
-header div.container div.row div.col-lg-5 p {
+header div.container div.row div.col-lg-4 p {
     font-size: 24px;
     line-height: 34px;
     color: #ffffff;
@@ -96,7 +86,7 @@ header div.container div.row div.col-lg-5 p {
     margin-bottom: 25px;
 }
 
-header div.container div.row div.col-lg-5>a {
+header div.container div.row div.col-lg-4>a {
     padding: 10px 50px;
     background-color: var(--second-color);
     border-radius: 25px;
@@ -110,11 +100,11 @@ header div.container div.row div.col-lg-5>a {
 
 /* Media Q for Header */
 @media screen and (max-width: 320px) {
-    header .container .row .col-lg-5 h1 {
+    header .container .row .col-lg-4 h1 {
         font-size: 48px !important;
     }
 
-    header .container .row .col-lg-5 p {
+    header .container .row .col-lg-4 p {
         font-size: 22px !important;
     }
 }
@@ -726,4 +716,8 @@ section.footer .container footer ul {
     writing-mode: vertical-rl;
     display: block;
     margin: auto;
+}
+
+section.footer .container footer ul li:hover{
+    color: var(--main-color);
 }
